# midterm

./: .gitignore  Biblical_Studies.csv  Cooking.csv  History.csv  README.md  Romance.csv  book_model.pkl  modelling.ipynb  mypy.ini  pyproject.toml
data/: Philosophers.csv
notebooks/: modelling.ipynb
src/: main.py
src/db/: connection.py
src/models/: book.py
src/notebooks/: modelling.ipynb
src/utils/: model_utils.py
